   * Changed: Rewrote the surface blending algorithm, and improving its speed
     using NEON intrinsics on processors supporting NEON (the Pandora).
   * Fixed bug #19503: "maximum auto saves" setting now works correctly.
   * Fixed: A preprocessor bug looking beyond the end of a buffer.
   * Fixed: Binding a temporary in the network code, possibly causing
     crashing.

Version 1.10.0:
 * Campaigns:
   * Legend of Wesmere:
     * Scenario 03: Fixed bug #19067: Control over Galtrid's side stays with the
       player after the arrival of Kalenz
     * Scenario 22: Fixed bug #19236: Cleodil was missing and no recall list
   * An Orcish Incursion:
     * Scenario 3: select a new unit with the Adviser (sic) role for dialogs if
       the original unit selected at the start of the scenario died
   * Under the Burning Suns:
     * Scenario 5: Fixed bug #19303: one of the dwarves was spawning in a wall.
   * The Rise of Wesnoth:
     * Peoples in Decline: fixed a message not shown when the Sea Serpent appears
 * Editor:
   * Added Etheral Abyss terrain (Qxua) to the Cave category, too
   * Updated the terrain palette icons for winter/fall single or mixed forested
     hills so they show the default base Hhd instead of Hh
 * Graphics:
   * Fixed some spearman attack animations being too slow in some directions
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Chinese (Traditional), Czech,
     Finnish, French, Galician, German, Hungarian, Italian, Latin, Lithuanian,
     Old English, Polish, Serbian, Slovak, Spanish
 * Lua API:
   * Extend and improve wesnoth.select_hex, deprecate wesnoth.highlight_hex
 * Multiplayer:
   * Allow tab completion of player names in commands (bug #19284)
   * Fixed bug #19260: 'villages_value' -> 'village_value' in 5p_The_Wilderlands
   * Fixed eras other than the default breaking 2p_Hornshark_Island. If a player
     has a faction not in the default era, a standard set of units (aimed at
     Khalifate) is used now.