@@ -241,6 +241,7 @@ Version 1.11.0-svn:
    * Fixed: A preprocessor bug looking beyond the end of a buffer.
    * Fixed: Binding a temporary in the network code, possibly causing
      crashing.
+   * Fixed bug #19658: In replays, units sometimes refresh movement when it is not their turn
 
 Version 1.10.0:
  * Campaigns:
